// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel 1 photo 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0px 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -webkit-transform: translateX( -0% );
  -ms-transform: translateX( -0% );
  transform: translateX( -0% );
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 > * {
  width: 100%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  margin: 16px 8px;
}

.c5 * {
  border-radius: 20px;
  width: 100%;
  max-width: 350px;
  max-height: 225px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="c3"
        onTransitionEnd={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Organic Pepper"
              src="https://picsum.photos/640/?image=1080"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel 2 photos 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0px 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -webkit-transform: translateX( -0% );
  -ms-transform: translateX( -0% );
  transform: translateX( -0% );
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 > * {
  width: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  margin: 16px 8px;
}

.c5 * {
  border-radius: 20px;
  width: 100%;
  max-width: 350px;
  max-height: 225px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="c3"
        onTransitionEnd={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Organic Pepper"
              src="https://picsum.photos/640/?image=1080"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=824"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel all photos 1`] = `
.c8 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c8 .farmblocks-icon {
  display: block;
}

.c6 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c6 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c6:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c6 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c6:not(:disabled):hover,
.c6:not(:disabled).hovered,
.c6:not(:disabled):active,
.c6:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c6:not(:disabled):hover .icon,
.c6:not(:disabled).hovered .icon,
.c6:not(:disabled):active .icon,
.c6:not(:disabled).active .icon,
.c6:not(:disabled):focus .icon,
.c6:not(:disabled).focused .icon {
  color: #3498db;
}

.c6:not(:disabled).active,
.c6:not(:disabled):active {
  box-shadow: none;
}

.c6:focus,
.c6.focused {
  outline: none;
}

.c6.focus-visible,
.c6.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0px 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -webkit-transform: translateX( -0% );
  -ms-transform: translateX( -0% );
  transform: translateX( -0% );
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 > * {
  width: 33.333333333333336%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 {
  margin: 16px 8px;
}

.c5 * {
  border-radius: 20px;
  width: 100%;
  max-width: 350px;
  max-height: 225px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  z-index: 1;
  border-radius: 32px;
}

@media (hover:none) and (pointer:coarse) {
  .c7 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="c3"
        onTransitionEnd={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Organic Pepper"
              src="https://picsum.photos/640/?image=1080"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=824"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Grapefruit"
              src="https://picsum.photos/640/?image=889"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=674"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=292"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=517"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=627"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=75"
            />
          </div>
        </div>
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <img
              alt="Romaine Lettuce"
              src="https://picsum.photos/640/?image=766"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="c6 c7   "
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-0px)",
          }
        }
      >
        <span
          className="c8"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            data-testid="right-arrow"
            height={24}
            viewBox="2 2 20 20"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span />
    </button>
  </div>
</div>
`;

exports[`Storyshots Carousel infinite loop 1`] = `
.c4 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c4 .farmblocks-icon {
  display: block;
}

.c2 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c2 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c2:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c2 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c2:not(:disabled):hover,
.c2:not(:disabled).hovered,
.c2:not(:disabled):active,
.c2:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c2:not(:disabled):hover .icon,
.c2:not(:disabled).hovered .icon,
.c2:not(:disabled):active .icon,
.c2:not(:disabled).active .icon,
.c2:not(:disabled):focus .icon,
.c2:not(:disabled).focused .icon {
  color: #3498db;
}

.c2:not(:disabled).active,
.c2:not(:disabled):active {
  box-shadow: none;
}

.c2:focus,
.c2.focused {
  outline: none;
}

.c2.focus-visible,
.c2.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0px 16px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -webkit-transform: translateX( -100% );
  -ms-transform: translateX( -100% );
  transform: translateX( -100% );
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c6 > * {
  width: 33.333333333333336%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  margin: 16px 8px;
}

.c8 * {
  border-radius: 20px;
  width: 100%;
  max-width: 350px;
  max-height: 225px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  z-index: 1;
  border-radius: 32px;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  height: 8px;
  width: 8px;
  margin-right: 6px;
  cursor: pointer;
  border-radius: 50%;
  background: rgba(0,0,0,0.08);
}

.c10.active {
  background: rgba(0,0,0,0.48);
}

@media (hover:none) and (pointer:coarse) {
  .c3 {
    display: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3   "
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-0px)",
          }
        }
      >
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            data-testid="left-arrow"
            height={24}
            viewBox="2 2 20 20"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.414 12l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L11.414 12z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span />
    </button>
    <div
      className="c5"
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="c6"
        onTransitionEnd={[Function]}
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=627"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=75"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Romaine Lettuce"
              src="https://picsum.photos/640/?image=766"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Organic Pepper"
              src="https://picsum.photos/640/?image=1080"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=824"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Grapefruit"
              src="https://picsum.photos/640/?image=889"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=674"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=292"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=517"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=627"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=75"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Romaine Lettuce"
              src="https://picsum.photos/640/?image=766"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Organic Pepper"
              src="https://picsum.photos/640/?image=1080"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Tomato"
              src="https://picsum.photos/640/?image=824"
            />
          </div>
        </div>
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <img
              alt="Grapefruit"
              src="https://picsum.photos/640/?image=889"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="c2 c3   "
      onClick={[Function]}
      type="button"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-0px)",
          }
        }
      >
        <span
          className="c4"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            data-testid="right-arrow"
            height={24}
            viewBox="2 2 20 20"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span />
    </button>
  </div>
  <div
    className="c9"
    data-testid="dots-container"
  >
    <span
      className="c10 active"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
    <span
      className="c10"
      onClick={[Function]}
    />
  </div>
</div>
`;
